crates/tokmd-tool-schema/tests/snapshots/properties__snapshot_rich_cmd_jsonschema.snap
---
source: crates/tokmd-tool-schema/tests/properties.rs
expression: rendered
---
{
  "$schema": "https://json-schema.org/draft-07/schema#",
  "description": "A rich CLI",
  "name": "rich",
  "schema_version": 1,
  "tools": [
    {
      "description": "A rich CLI",
      "name": "rich",
      "parameters": {
        "properties": {},
        "required": [],
        "type": "object"
      }
    },
    {
      "description": "Scan a directory",
      "name": "scan",
      "parameters": {
        "properties": {
          "flag": {
            "description": "A boolean flag",
            "type": "boolean"
          },
          "format": {
            "default": "json",
            "description": "Output format",
            "enum": [
              "json",
              "csv",
              "md"
            ],
            "type": "string"
          },
          "items": {
            "description": "Repeatable item list",
            "type": "array"
          },
          "path": {
            "description": "Directory to scan",
            "type": "string"
          },
          "verbose": {
            "description": "Verbosity level",
            "type": "integer"
          }
        },
        "required": [
          "path"
        ],
        "type": "object"
      }
    },
    {
      "description": "Export results",
      "name": "export",
      "parameters": {
        "properties": {
          "output": {
            "description": "Output file path",
            "type": "string"
          }
        },
        "required": [
          "output"
        ],
        "type": "object"
      }
    }
  ],
  "version": "2.0.0"
}
